# Ai_Agent_HealthPassPort

./: .dockerignore  .env  .env.example  .gitignore  AI_CONTEXT.md  BACKEND_STRUCTURE.md  Dockerfile  FIX_PERMISSIONS.md  GCP_SETUP.md  PRD.txt  README.md  cors.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/core/: __init__.py  email.py  logging.py  push_notifications.py  security.py
app/data/: __init__.py  biomarker_mapping.py
app/features/ai/: models.py  router.py  schemas.py  service.py
app/features/appointments/: models.py  router.py  schemas.py  service.py
app/features/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
app/features/clinic/: models.py  router.py  schemas.py  service.py
app/features/dashboard/: __init__.py  router.py  schemas.py  service.py
app/features/files/: models.py  router.py  schemas.py  service.py
app/features/labs/: models.py  router.py  schemas.py  service.py
app/features/messages/: models.py  router.py  schemas.py  service.py  socket.py
app/features/notes/: models.py  router.py  schemas.py  service.py
app/features/notifications/: models.py  router.py  schemas.py  service.py
app/features/patients/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
app/features/programs/: models.py  router.py  schemas.py  service.py
app/graphs/: __init__.py
app/graphs/lab_extraction/: __init__.py  graph.py  nodes.py  (+1 more)
app/models/: __init__.py  biomarker.py  lab_report.py
app/routers/: __init__.py  health.py  process.py
app/schemas/: __init__.py  extraction.py
app/services/: __init__.py  pdf_service.py  vision_service.py
app/shared/: exceptions.py  models.py  schemas.py
tests/: BLR-0425-PA-0039320_501848074 Final bill and DS   26042025_27-04-2025_1054-20_AM.pdf_page_10_extracted.json  BLR-0425-PA-0040326_Lab Report Sunita_27-04-2025_0131-15_PM@G.pdf_page_11_extracted.json  BLR-0425-PA-0040880_E-1745741621426SUSHILADEVIds_250427_1347@E.pdf_page_2_extracted.json  __init__.py  test_services.py  test_vision_extraction.py  test_with_pdf.py
