[project]
name = "ai-health-passport"
version = "0.1.0"
description = "AI Agent for Lab Report Extraction and Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # PDF Processing
    "pymupdf>=1.24.0",        # PDF text/image extraction
    "pdfplumber>=0.11.0",      # Table extraction
    "pillow>=10.0.0",          # Image processing
    
    # AI/LLM
    "openai>=1.40.0",          # OpenAI API
    "langchain>=0.3.0",        # LangChain framework
    "langchain-openai>=0.2.0", # LangChain OpenAI integration
    "langgraph>=0.2.0",        # LangGraph for workflows
    
    # Data Validation
    "pydantic>=2.0.0",         # Schema validation
    "pydantic-settings>=2.0.0", # Settings management
    
    # Database
    "motor>=3.3.0",            # Async MongoDB
    "beanie>=1.25.0",          # MongoDB ODM
    
    # API
    "fastapi>=0.110.0",        # Web framework
    "uvicorn>=0.27.0",         # ASGI server
    "python-multipart>=0.0.9", # File uploads
    
    # Utilities
    "python-dotenv>=1.0.0",    # Environment variables
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
